# magic_phase

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  align_files.py  flake.nix  phase_align.py
.claude/: settings.local.json
docs/: FAKEDAW_PLAN.md  MAGIC_ALIGN_ALGORITHM.md  MULTI_TRACK_ALIGNMENT.md  SPANNING_TREE_ALIGNMENT.md  USER_EXPERIENCE_CONTRACT.md  dual_correlation_strategy.md  late_night_multi_mic_conclusions.md  sub-sample-mode.md  vst3-integration-test-harness.md
misc/: PKG-Magic-Phase-UI-FINAL.html
python/: align_files.py  graph_align.py  magic_align.py  phase_audit.py  plot_cpp_results.py
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/DSP/: PhaseAnalyzer.cpp  PhaseAnalyzer.h  PhaseCorrector.cpp  PhaseCorrector.h  STFTProcessor.cpp  STFTProcessor.h
src/GUI/: LookAndFeel.cpp  LookAndFeel.h  MainComponent.cpp  MainComponent.h  TrackRow.cpp  TrackRow.h
src/IPC/: PlatformSharedMemory.h  PlatformSharedMemory_posix.cpp  PlatformSharedMemory_win32.cpp  SharedState.cpp  SharedState.h
src/Tools/: AudioFile.cpp  AudioFile.h  IPCTest.cpp  MagicPhaseTest.cpp
src/Tools/FakeDAW/: FakeDAW.cpp
src/Tools/VST3TestHarness/: Main.cpp  MockPlayHead.h  ResultWriter.cpp  ResultWriter.h  TestRunner.cpp  TestRunner.h
support/: compare_results.py  create_reaper_project.py  plot_test_results.py  run_offline_test.py  run_test.py
tests/integration/: 7sg_full_kit.json  7sg_kick_snare_overhead.json  7sg_snare_focused.json  7sg_snare_focused_time_only.json  7sg_snare_top_bottom.json  amp_sim_4way.json  drums_8way.json  lfwh_3way.json  lfwh_3way_magic.json  lfwh_sm57_vs_u87.json  tbm_full_kit.json  tbm_full_kit_magic.json  tbm_full_kit_time_only.json  tbm_kick_room.json  tbm_overheads.json  tbm_overheads_kick.json  tbm_overheads_lr.json  tbm_overheads_room.json  tbm_snare_overheads.json  tbm_snare_top_bottom.json
